[package]
name = "spsc-bounded-queue"
version = "0.0.1"
authors = [
"Charles Saracco <crsaracco@gmail.com>",
"Zachary Tong <zacharyjtong@gmail.com>"
]
license = "Apache-2.0"
description = "A bounded SPSC queue."

repository = "https://github.com/crsaracco/spsc-bounded-queue"
homepage = "https://github.com/crsaracco/spsc-bounded-queue"
keywords = ["data-structures", "queue", "buffer", "spsc", "lock-free"]
readme = "README.md"

[lib]
name = "bounded_spsc_queue"
doctest = false

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.2.3"
time = "0.1.39"
